test/samples/invalid/tc/global_struct_literal_extra_field.maruir
struct Foo {
	a: u8;
	b: u8[] *#exception;
}

var c: Foo* #exception = {
	a: 1_u8,
	b: [42_u8, 43_u8, 44_u8],
	c: false
}